@@ -1371,15 +1371,9 @@
   <!-- Clustering Component
 
        http://wiki.apache.org/solr/ClusteringComponent
-
-       You'll need to set the solr.clustering.enabled system property
-       when running solr to run with clustering enabled:
-
-            java -Dsolr.clustering.enabled=true -jar start.jar
-
     -->
   <searchComponent name="clustering"
-                   enable="${solr.clustering.enabled:false}"
+                   enable="${solr.clustering.enabled:true}"
                    class="solr.clustering.ClusteringComponent" >
     <!-- Declare an engine -->
     <lst name="engine">
@@ -1445,7 +1439,7 @@
     -->
   <requestHandler name="/clustering"
                   startup="lazy"
-                  enable="${solr.clustering.enabled:false}"
+                  enable="${solr.clustering.enabled:true}"
                   class="solr.SearchHandler">
     <lst name="defaults">
       <bool name="clustering">true</bool>
