@@ -9,7 +9,7 @@
 
 ## Div tag has placeholder text by default
 <div id="clusters">
-  Run Solr with java -Dsolr.clustering.enabled=true -jar start.jar to see results
+  Loading...
 </div>
 
 ## Replace the div content *if* Carrot^2 is available
